<resources>
    <string name="app_name">Rsvp</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="allergies">Allergies</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ChangeTask">Change Task</string>
    <string name="ChangeDueDate">Change Due Date</string>
    <string name="ChangeOwner">Who is responsible</string>
</resources>
