<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.ria.rsvp.Rsvp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="374dp"
        android:layout_height="523dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tropical_watercolor" />

    <CheckBox
        android:id="@+id/checkBoxYes"
        android:layout_width="68dp"
        android:layout_height="31dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/yes"
        android:onClick="yesClicked"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/checkBoxNO"
        android:layout_width="65dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no"
        android:onClick="noClicked"
        app:layout_constraintStart_toEndOf="@+id/checkBoxYes"
        app:layout_constraintTop_toTopOf="@+id/checkBoxYes" />

    <EditText
        android:id="@+id/rsvpName"
        style="@android:style/Widget.Holo.Light.EditText"
        android:layout_width="238dp"
        android:layout_height="39dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxYes" />

    <EditText
        android:id="@+id/rsvpAllergy"
        android:layout_width="238dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/allergies"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsvpName" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="saveInfo"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsvpAllergy" />

</android.support.constraint.ConstraintLayout>
