<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ria.rsvp.Editing">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ChangeTask"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ChangeDueDate"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTask"
        app:layout_constraintTop_toBottomOf="@+id/editTask" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ChangeOwner"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTask"
        app:layout_constraintTop_toBottomOf="@+id/editDueDate" />

    <EditText
        android:id="@+id/editOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="text|date"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="Task"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="Due Date"
        android:inputType="text|date"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="213dp"
        android:layout_height="49dp"
        android:layout_marginTop="76dp"
        android:onClick="saveChangesClicked"
        android:text="Save Changes"
        app:layout_constraintStart_toStartOf="@+id/editOwner"
        app:layout_constraintTop_toBottomOf="@+id/editOwner" />
</android.support.constraint.ConstraintLayout>
